--- a/META.yml
+++ b/META.yml
@@ -1,56 +1,49 @@
---- #YAML:1.0
+---
 name: HTML-Widgets-NavMenu
-version: 0.8.0
+version: 0.10.0
+author: ~
+abstract: A Perl Module for Generating HTML Navigation Menus
 license: bsd
-distribution_type: module
 requires:
   Class::Accessor: 0
   Error: 0
   Test::More: 0
   perl: 5.6.1
-recommends: {}
-build_requires: {}
-conflicts: {}
 provides:
   HTML::Widgets::NavMenu:
     file: lib/HTML/Widgets/NavMenu.pm
-    version: 0.8.0
+    version: 0.10.0
   HTML::Widgets::NavMenu::Error:
     file: lib/HTML/Widgets/NavMenu.pm
-    version: 0.8.0
+    version: 0.10.0
   HTML::Widgets::NavMenu::Error::Redirect:
     file: lib/HTML/Widgets/NavMenu.pm
-    version: 0.8.0
+    version: 0.10.0
   HTML::Widgets::NavMenu::EscapeHtml:
     file: lib/HTML/Widgets/NavMenu/EscapeHtml.pm
   HTML::Widgets::NavMenu::HeaderRole:
     file: lib/HTML/Widgets/NavMenu/HeaderRole.pm
   HTML::Widgets::NavMenu::Iterator::Base:
     file: lib/HTML/Widgets/NavMenu/Iterator/Base.pm
-  ? |-
-    HTML::Widgets::NavMenu::Iterator::GetCurrentlyActive
-:
+  HTML::Widgets::NavMenu::Iterator::GetCurrentlyActive:
     file: lib/HTML/Widgets/NavMenu.pm
-    version: 0.8.0
+    version: 0.10.0
   HTML::Widgets::NavMenu::Iterator::Html:
     file: lib/HTML/Widgets/NavMenu/Iterator/Html.pm
   HTML::Widgets::NavMenu::Iterator::Html::Item:
     file: lib/HTML/Widgets/NavMenu/Iterator/Html.pm
   HTML::Widgets::NavMenu::Iterator::NavMenu:
     file: lib/HTML/Widgets/NavMenu/Iterator/NavMenu.pm
-  ? |-
-    HTML::Widgets::NavMenu::Iterator::NavMenu::HeaderRole
-:
-    file: |-
-      lib/HTML/Widgets/NavMenu/Iterator/NavMenu/HeaderRole.pm
+  HTML::Widgets::NavMenu::Iterator::NavMenu::HeaderRole:
+    file: lib/HTML/Widgets/NavMenu/Iterator/NavMenu/HeaderRole.pm
   HTML::Widgets::NavMenu::Iterator::SiteMap:
     file: lib/HTML/Widgets/NavMenu/Iterator/SiteMap.pm
   HTML::Widgets::NavMenu::LeadingPath::Component:
     file: lib/HTML/Widgets/NavMenu.pm
-    version: 0.8.0
+    version: 0.10.0
   HTML::Widgets::NavMenu::NodeDescription:
     file: lib/HTML/Widgets/NavMenu.pm
-    version: 0.8.0
+    version: 0.10.0
   HTML::Widgets::NavMenu::Object:
     file: lib/HTML/Widgets/NavMenu/Object.pm
   HTML::Widgets::NavMenu::Predicate:
@@ -67,4 +60,4 @@ provides:
     file: lib/HTML/Widgets/NavMenu/Tree/Node.pm
   HTML::Widgets::NavMenu::Url:
     file: lib/HTML/Widgets/NavMenu/Url.pm
-generated_by: Module::Build version 0.21
+generated_by: Module::Build version 0.2608
