--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: HTML-Widgets-NavMenu
-version: 1.0001
+version: 1.0100
 author:
   - |-
     Shlomi Fish E<lt>shlomif@iglu.org.ilE<gt> 
@@ -18,13 +18,15 @@ requires:
 provides:
   HTML::Widgets::NavMenu:
     file: lib/HTML/Widgets/NavMenu.pm
-    version: 1.0001
+    version: 1.0100
   HTML::Widgets::NavMenu::Error:
     file: lib/HTML/Widgets/NavMenu.pm
   HTML::Widgets::NavMenu::Error::Redirect:
     file: lib/HTML/Widgets/NavMenu.pm
   HTML::Widgets::NavMenu::EscapeHtml:
     file: lib/HTML/Widgets/NavMenu/EscapeHtml.pm
+  HTML::Widgets::NavMenu::ExpandVal:
+    file: lib/HTML/Widgets/NavMenu/ExpandVal.pm
   HTML::Widgets::NavMenu::HeaderRole:
     file: lib/HTML/Widgets/NavMenu/HeaderRole.pm
   HTML::Widgets::NavMenu::Iterator::Base:
@@ -61,7 +63,7 @@ provides:
     file: lib/HTML/Widgets/NavMenu/Tree/Node.pm
   HTML::Widgets::NavMenu::Url:
     file: lib/HTML/Widgets/NavMenu/Url.pm
-generated_by: Module::Build version 0.2805
+generated_by: Module::Build version 0.2808
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
   version: 1.2
