--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: HTML-Widgets-NavMenu
-version: 1.0302
+version: 1.0400
 author:
   - |-
     Shlomi Fish E<lt>shlomif@iglu.org.ilE<gt> 
@@ -13,14 +13,15 @@ resources:
   repository: http://svn.berlios.de/svnroot/repos/web-cpan/nav-menu/
 requires:
   Class::Accessor: 0
-  Error: 0
   IO::Scalar: 0
   Test::More: 0
-  perl: 5.6.1
+  perl: v5.6.1
+configure_requires:
+  Module::Build: 0.35
 provides:
   HTML::Widgets::NavMenu:
     file: lib/HTML/Widgets/NavMenu.pm
-    version: 1.0302
+    version: 1.0400
   HTML::Widgets::NavMenu::Error:
     file: lib/HTML/Widgets/NavMenu.pm
   HTML::Widgets::NavMenu::Error::Redirect:
@@ -65,7 +66,7 @@ provides:
     file: lib/HTML/Widgets/NavMenu/Tree/Node.pm
   HTML::Widgets::NavMenu::Url:
     file: lib/HTML/Widgets/NavMenu/Url.pm
-generated_by: Module::Build version 0.33
+generated_by: Module::Build version 0.35
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
