--- a/META.yml
+++ b/META.yml
@@ -42,7 +42,7 @@ name: HTML-Widgets-NavMenu
 provides:
   HTML::Widgets::NavMenu:
     file: lib/HTML/Widgets/NavMenu.pm
-    version: 1.0501
+    version: 1.0600
   HTML::Widgets::NavMenu::Error:
     file: lib/HTML/Widgets/NavMenu.pm
   HTML::Widgets::NavMenu::Error::Redirect:
@@ -61,12 +61,16 @@ provides:
     file: lib/HTML/Widgets/NavMenu/Iterator/Html.pm
   HTML::Widgets::NavMenu::Iterator::Html::Item:
     file: lib/HTML/Widgets/NavMenu/Iterator/Html.pm
+  HTML::Widgets::NavMenu::Iterator::JQTreeView:
+    file: lib/HTML/Widgets/NavMenu/Iterator/JQTreeView.pm
   HTML::Widgets::NavMenu::Iterator::NavMenu:
     file: lib/HTML/Widgets/NavMenu/Iterator/NavMenu.pm
   HTML::Widgets::NavMenu::Iterator::NavMenu::HeaderRole:
     file: lib/HTML/Widgets/NavMenu/Iterator/NavMenu/HeaderRole.pm
   HTML::Widgets::NavMenu::Iterator::SiteMap:
     file: lib/HTML/Widgets/NavMenu/Iterator/SiteMap.pm
+  HTML::Widgets::NavMenu::JQueryTreeView:
+    file: lib/HTML/Widgets/NavMenu/JQueryTreeView.pm
   HTML::Widgets::NavMenu::LeadingPath::Component:
     file: lib/HTML/Widgets/NavMenu.pm
   HTML::Widgets::NavMenu::NodeDescription:
@@ -96,4 +100,4 @@ resources:
   homepage: http://web-cpan.berlios.de/modules/HTML-Widgets-NavMenu/
   license: http://www.opensource.org/licenses/mit-license.php
   repository: http://svn.berlios.de/svnroot/repos/web-cpan/nav-menu/
-version: 1.0501
+version: 1.0600
