--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,12 @@
 ---
 abstract: 'A Perl Module for Generating HTML Navigation Menus'
 author:
-  - 'Shlomi Fish E<lt>shlomif@iglu.org.ilE<gt>'
+  - 'Shlomi Fish, E<lt>shlomif@cpan.orgE<gt>, L<http://www.shlomifish.org/> .'
 build_requires: {}
 configure_requires:
   Module::Build: 0.36
 dynamic_config: 1
-generated_by: 'Module::Build version 0.3901, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.120630'
 keywords:
   - arrows
   - bar
@@ -44,7 +44,7 @@ name: HTML-Widgets-NavMenu
 provides:
   HTML::Widgets::NavMenu:
     file: lib/HTML/Widgets/NavMenu.pm
-    version: 1.0601
+    version: 1.0602
   HTML::Widgets::NavMenu::Error:
     file: lib/HTML/Widgets/NavMenu.pm
     version: 0
@@ -126,4 +126,4 @@ resources:
   homepage: http://web-cpan.berlios.de/modules/HTML-Widgets-NavMenu/
   license: http://www.opensource.org/licenses/mit-license.php
   repository: http://svn.berlios.de/svnroot/repos/web-cpan/nav-menu/
-version: 1.0601
+version: 1.0602
